examples/good/07-static_id.ez
x : Integer;
x = 7;

letExample : Integer -> Integer;
letExample = let x = 3 in lambda{Integer -> Integer} t -> 3 + t;

main : Bool;
main = letExample 5 == 8;
