examples/bad/wrong_type_arg_1.ez
f : Integer -> Integer;
f x = x + x + x + x;

main : Integer;
main = f True;
